# substrate-package-demo

zee/: Cargo.toml  README.md
zee-ui/src/: app.jsx
zee/runtime/: Cargo.toml
zee/runtime/src/: lib.rs
zee/runtime/wasm/: Cargo.toml  build.sh
zee/runtime/wasm/src/: lib.rs
zee/src/: chain_spec.rs  main.rs  service.rs
